@@ -1,3 +1,11 @@
+2006-04-27  Michael Hutchinson <m.j.hutchinson@gmail.com> 
+
+	* ToolboxItemToolboxNode.cs: Accessor for ToolboxItem.
+	* ToolboxStore.cs: Don't rebuild after blank filter.
+	* CategoryToolboxNode.cs: Add Clear () method to remove all children.
+	* Toolbox.cs: Get categories from ToolboxService, and maintain expansion 
+	and selection state where possible.
+	
 2006-04-26  Michael Hutchinson <m.j.hutchinson@gmail.com> 
 
 	* BaseToolboxNode.cs:
